fix(contact): align address and map

--- a/app/styles/about.css
+++ b/app/styles/about.css
@@ -6,3 +6,7 @@
 .contact-marketing {
     background-image: url('../images/sax_laptop.jpg');
 }
+
+.contact-map {
+    margin-top: 30px;   
+}
